[tool.poetry]
name = "py-game-of-life"
version = "0.1.0"
description = "Efficient Conway's Game of Life using NumPy"
authors = ["Jay Lee <jaeho.lee@snu.ac.kr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zeta611/py-game-of-life"
repository = "https://github.com/zeta611/py-game-of-life"
keywords = ["Game of Life"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.1.0"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
