[tool.poetry]
name = "golpy"
version = "0.1.1"
description = "Efficient Conway's Game of Life using NumPy"
authors = ["Jay Lee <jaeho.lee@snu.ac.kr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zeta611/py-game-of-life"
repository = "https://github.com/zeta611/py-game-of-life"
keywords = ["Game of Life"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.1.0"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
life = "golpy.__init__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
