[tool.poetry]
name = "golpy"
version = "0.3.0"
description = "Efficient Conway's Game of Life using NumPy"
authors = ["Jay Lee <jaeho.lee@snu.ac.kr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zeta611/py-game-of-life"
repository = "https://github.com/zeta611/py-game-of-life"
keywords = ["Game of Life"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^10.3.0"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
black = "^24.4"

[tool.poetry.scripts]
life = "golpy.__init__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
